# pygraver

./: CMakeLists.txt  Doxyfile  README.md  pyproject.toml  setup.py
doc/html/: annotated.html  annotated_dup.js  arc_8h.html  arc_8h.js  arc_8h_source.html  bezier3_8h.html  bezier3_8h.js  bezier3_8h_source.html  cartesianmodel_8h_source.html  class_path_group_test-members.html  class_path_group_test.html  class_path_test-members.html  class_path_test.html  class_shape3_d_test-members.html  class_shape3_d_test.html  class_surface_test-members.html  class_surface_test.html  classes.html  classpygraver_1_1exceptions_1_1_invalid_answer_exception.html  classpygraver_1_1exceptions_1_1_py_graver_exception.html  classpygraver_1_1machine_1_1_machine-members.html  classpygraver_1_1machine_1_1_machine.html  classpygraver_1_1machine_1_1_machine.js  classpygraver_1_1machine_1_1_machine_a0775613dbb2aed1e66672902ea55652d.html  classpygraver_1_1machine_1_1_machine_a0ac53d3c2385df75c3fca2f8bb369803.html  classpygraver_1_1machine_1_1_machine_a0bee2d87feeb3703113b59f178157f4a.html  classpygraver_1_1machine_1_1_machine_a126bbdca13e5bd7d11c6ffe74c0f13f0.html  classpygraver_1_1machine_1_1_machine_a1b1992fd979979c2e3107a5493df8e0f.html  classpygraver_1_1machine_1_1_machine_a26a8ed1f0c41172c22ebe9dc2cf0bf98.html  classpygraver_1_1machine_1_1_machine_a2e22b5b8139822919ea4f4f57c6e0ff9.html  classpygraver_1_1machine_1_1_machine_a2e878af0a76e1cbf6e3e52356441c709.html  classpygraver_1_1machine_1_1_machine_a3347a3134c0dcbfd797b9d204da0c082.html  classpygraver_1_1machine_1_1_machine_a371230e1b6b9820fc1a22bb3b9853fcb.html  classpygraver_1_1machine_1_1_machine_a391174659ca9426717255b0f55c6d81a.html  classpygraver_1_1machine_1_1_machine_a3f2c8b763e03e367cb3f1a66149bdbbe.html  classpygraver_1_1machine_1_1_machine_a457c25950c2075acf2d1705956e315da.html  classpygraver_1_1machine_1_1_machine_a50cbb6786e3e92d7c328c15e78584b62.html  classpygraver_1_1machine_1_1_machine_a5cbeb18e5f2c652feff8237f5cca7033.html  classpygraver_1_1machine_1_1_machine_a624a811a7427abb5c4863032529ddee7.html  classpygraver_1_1machine_1_1_machine_a6e7aafd01c0b54d2e82885ee9da2e78c.html  (+769 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+65 more)
examples/: example1.py  example2.py  example3.py  example3b.py  example3c.py  example3d.py  example4.py  example4b.py  example5.py
pygraver/: exceptions.py  machine.py  render.py  web.py
src/: exports.cpp  log.h
src/render/: cylinder.cpp  cylinder.h  exports.cpp  exports.h  extrusion.cpp  extrusion.h  marker.cpp  marker.h  model.cpp  model.h  shape3d.cpp  shape3d.h  vtkevents.cpp  vtkevents.h  vtkpybind.h  wire.cpp  wire.h
src/svg/: arc.h  bezier3.h  ellipse.h  exports.cpp  exports.h  file.cpp  file.h  line.h  path.h  rect.h  segment.h  shape.h  util.h
src/tests/render/: extrusion.cpp  marker.cpp  shape3d.cpp  wire.cpp
src/tests/svg/: arc.cpp  bezier3.cpp  file.cpp  line.cpp  path.cpp
src/tests/types/: path.cpp  pathgroup.cpp  point.cpp  surface.cpp
src/types/: common.h  path.cpp  path.h  pathgroup.cpp  pathgroup.h  point.cpp  point.h  surface.cpp  surface.h
tests/: __init__.py  common.py  machine.py  render.py  types.py
